# detector-testing-system

./: .gitignore  README.md  app (bias).ipynb  app (capacity).ipynb  app (efficiency).ipynb  app (nonlinearity).ipynb  app (read-noise).ipynb  app.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
app/: app (bias).ipynb  app (capacity).ipynb  app (nonlinearity).ipynb  app (read-noise).ipynb  app.ipynb
app/config/: __init__.py  config.py
app/core/: __init__.py  config.py  data.py  experiment.py
app/docs/: output-control.md
app/utils/: bias.py  capacity.py  dark_current.py  gradient.py  nonlinearity.py  read_noise.py  utils.py
demo/: app (bias).ipynb  app (efficiency).ipynb  app (nonlinearity).ipynb  app (read-noise).ipynb
detector_testing_system/: __init__.py  config.py  loggers.py  output.py  signal.py  types.py  utils.py
detector_testing_system/characteristic/: bias.py  capacity.py  dark_current.py  efficiency.py  gradient.py  nonlinearity.py  read_noise.py
detector_testing_system/data/: __init__.py  data.py  utils.py
detector_testing_system/device/: __init__.py  device.py
detector_testing_system/experiment/: __init__ copy.py  __init__.py  config.py  data.py  exceptions.py  experiment.py
src/demo/: app (efficiency).ipynb
src/detector_testing_system/: config.py  output.py  utils.py
src/detector_testing_system/characteristic/: bias.py  dark_current.py  efficiency.py  gradient.py  nonlinearity.py
src/detector_testing_system/device/: device.py
src/detector_testing_system/experiment/: __init__.py  (+4 more)
tests/fakes/: device.py
(+3 files in other folders)
