[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detector-testing-system"
version = "0.1.0"
description = "`Detector Testing System` is a library for testing of the basic parameters of detectors."
authors = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
maintainers = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "distfit==1.7.3",
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "scipy==1.12.0",
    "tqdm==4.66.2",
]
requires-python = "==3.10.*"

[dependency-groups]
linting = [
    "flake8",
    "flake8-commas",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-builtins",
    "pep8-naming",
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-flake8",
]
dev = [
    {include-group = "linting"},
    {include-group = "testing"},
]
notebook = [
    "ipykernel>=6.29.5",
    "jupyter==1.1.1",
]
app = [
    {include-group = "notebook"},
    "vmk-spectrum3-wrapper",
    "vmk-spectrum3",
]

[tool.uv.sources]
vmk-spectrum3-wrapper = { git = "https://github.com/Exinker/vmk_spectrum3_wrapper", rev = "develop" }
vmk-spectrum3 = { path = "vmk_spectrum3-0.2.0-cp310-cp310-win_amd64.whl" }
